[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ColorDifference.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 360.0
margin_right = 560.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBlocks" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ColorBlocks"]
margin_right = 98.0
margin_bottom = 102.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainColor" type="ColorRect" parent="VBoxContainer/ColorBlocks"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 102.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 200.0
margin_bottom = 110.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 200.0
margin_bottom = 134.0
text = "Select Main Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 200.0
margin_bottom = 142.0

[node name="DifferenceLabel" type="Label" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 200.0
margin_bottom = 160.0
custom_styles/normal = SubResource( 1 )
text = "Difference"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
